--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <title>CSS Tutorial</title>
 </head>
 <body>
-    <div id="header">
+    <div id="header" style="position: absolute; top: 0; left: 0; width: 100%;">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the website:</p>
     </div>
+    <p style="font-size: 10px;">Hello there!</p>
+    <p style="font-size: 10px;">Hello there!</p>
+    <p style="font-size: 10px;">Hello there!</p>
+    <p style="font-size: 10px;">Hello there!</p>
+    <p>Hello there!</p>
+    <p>Hello there!</p>
+    <p>Hello there!</p>
     <p>Hello there!</p>
 </body>
 </html>
