Add embedded style

--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <html>
 <head>
     <title>CSS Tutorial</title>
+    <style>
+        p{
+            font-size: 10px;
+        }
+        #header{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <div id="header" style="position: absolute; top: 0; left: 0; width: 100%;">
+    <div id="header">
         <h1>Selectors</h1>
         <h2>In CSS</h2>
         <p>Welcome to the website:</p>
     </div>
-    <p style="font-size: 10px;">Hello there!</p>
-    <p style="font-size: 10px;">Hello there!</p>
-    <p style="font-size: 10px;">Hello there!</p>
-    <p style="font-size: 10px;">Hello there!</p>
+    <p>Hello there!</p>
+    <p>Hello there!</p>
+    <p>Hello there!</p>
+    <p>Hello there!</p>
     <p>Hello there!</p>
     <p>Hello there!</p>
     <p>Hello there!</p>
