--- a/Contacts.html
+++ b/Contacts.html
@@ -6,9 +6,7 @@
 </head>
 <body>
     <div id="header">
-        <h1>Selectors</h1>
-        <h2>In CSS</h2>
-        <p>Welcome to the website:</p>
+        <h1>Contacts</h1>
     </div>
     <p>Hello there!</p>
     <p>Hello there!</p>
