Add tag selectors

--- a/Contacts.html
+++ b/Contacts.html
@@ -8,13 +8,10 @@
     <div id="header">
         <h1>Contacts</h1>
     </div>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
+    <p>Hello there! Contact us below.</p>
+    <p>Aren't paragraph</p>
+    <a href="http://www.google.com">Google</a>
+    <span>A span tag</span>
+    
 </body>
 </html>
