Add id and class selectors

--- a/Contacts.html
+++ b/Contacts.html
@@ -6,12 +6,19 @@
 </head>
 <body>
     <div id="header">
-        <h1>Contacts</h1>
+        <h1>Contact Us</h1>
+        <h2>Contact the team</h2>
     </div>
-    <p>Hello there! Contact us below.</p>
+
+    <h2 id="content-header">Content</h2>
+
+    <p class="deck">Hello there! Contact us below.</p>
     <p>Aren't paragraph</p>
     <a href="http://www.google.com">Google</a>
     <span>A span tag</span>
+    <span class="deck">A span tag too</span>
+    <span class="deck">A deck of spans</span>
+    <span class="deck">A deck of spans goes on</span>
     
 </body>
 </html>
