--- a/Contacts.html
+++ b/Contacts.html
@@ -3,6 +3,11 @@
 <head>
     <title>CSS Tutorial</title>
     <link rel="stylesheet" type="text/css" href="css/syntax.css">
+    <style>
+        span{
+            color: purple;
+        }
+    </style>
 </head>
 <body>
     <div id="header">
@@ -15,7 +20,7 @@
     <p class="deck">Hello there! Contact us below.</p>
     <p>Aren't paragraph</p>
     <a href="http://www.google.com">Google</a>
-    <span>A span tag</span>
+    <span style="color: green;">A span tag</span>
     <span class="deck">A span tag too</span>
     <span class="deck">A deck of spans</span>
     <span class="deck">A deck of spans goes on</span>
