Add inheritance conflicts

--- a/Contacts.html
+++ b/Contacts.html
@@ -2,12 +2,7 @@
 <html>
 <head>
     <title>CSS Tutorial</title>
-    <link rel="stylesheet" type="text/css" href="css/syntax.css">
-    <style>
-        span{
-            color: purple;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/syntax.css">    
 </head>
 <body>
     <div id="header">
@@ -17,13 +12,17 @@
 
     <h2 id="content-header">Content</h2>
 
-    <p class="deck">Hello there! Contact us below.</p>
-    <p>Aren't paragraph</p>
-    <a href="http://www.google.com">Google</a>
-    <span style="color: green;">A span tag</span>
+    <div>
+        <p class="deck">Hello there! Contact us below.</p>
+        <p>Aren't paragraph</p>
+    </div>
+
+    <span>A span tag</span>
     <span class="deck">A span tag too</span>
     <span class="deck">A deck of spans</span>
     <span class="deck">A deck of spans goes on</span>
     
+    <a href="#">I'm a spanner</a>
+
 </body>
 </html>
