Add specificity rules in conflicts

--- a/Contacts.html
+++ b/Contacts.html
@@ -12,9 +12,9 @@
 
     <h2 id="content-header">Content</h2>
 
-    <div>
-        <p class="deck">Hello there! Contact us below.</p>
-        <p>Aren't paragraph</p>
+    <div id="main-content">
+        <p class="deck">Hello there! <strong>Contact us below.</strong></p>
+        <p class="test">Aren't paragraph</p>
     </div>
 
     <span>A span tag</span>
@@ -22,7 +22,5 @@
     <span class="deck">A deck of spans</span>
     <span class="deck">A deck of spans goes on</span>
     
-    <a href="#">I'm a spanner</a>
-
 </body>
 </html>
