Add important declaration

--- a/Contacts.html
+++ b/Contacts.html
@@ -14,8 +14,10 @@
 
     <div id="main-content">
         <p class="deck">Hello there! <strong>Contact us below.</strong></p>
-        <p class="test">Aren't paragraph</p>
+        <p>Aren't paragraph</p>
     </div>
+
+    <p>None contained P tag</p>
 
     <span>A span tag</span>
     <span class="deck">A span tag too</span>
