Add targeting multiple elements

--- a/Contacts.html
+++ b/Contacts.html
@@ -24,5 +24,12 @@
     <span class="deck">A deck of spans</span>
     <span class="deck">A deck of spans goes on</span>
     
+    <a href="#">I am a link</a>
+
+    <ul>
+        <li>List item 1</li>
+        <li>List item 2</li>
+    </ul>
+
 </body>
 </html>
