Add descendant elements selector

--- a/Contacts.html
+++ b/Contacts.html
@@ -15,6 +15,10 @@
     <div id="main-content">
         <p class="deck">Hello there! <strong>Contact us below.</strong></p>
         <p>Aren't paragraph</p>
+
+        <div id="sub-content">
+            <p>More content</p>
+        </div>
     </div>
 
     <p>None contained P tag</p>
