--- a/Contacts.html
+++ b/Contacts.html
@@ -21,14 +21,21 @@
         </div>
     </div>
 
+    <div>
+        <p>This is the third div</p>
+    </div>
+
     <p>None contained P tag</p>
 
     <span>A span tag</span>
-    <span class="deck">A span tag too</span>
+    <span class="deck halls">A span tag too</span>
     <span class="deck">A deck of spans</span>
     <span class="deck">A deck of spans goes on</span>
     
-    <a href="#">I am a link</a>
+    <a href="http://google.com" title="Google">I am a link</a>
+    <a href="#" title="Search engine">I am a link</a>
+    <a href="something.pdf">pdf file</a>
+    <a href="something2.pdf">pdf file</a>
 
     <ul>
         <li>List item 1</li>
