--- a/articles.html
+++ b/articles.html
@@ -9,30 +9,31 @@
         <h1>Articles</h1>
     </div>
 
-    <div id="all-articles">
-        <h2>Article #1</h2>
+    <article>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
+    </article>
 
-        <h2>Article #2</h2>
+    <article>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
+    </article>
 
-        <h2>Article #3</h2>
+    <article>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
-    </div>
+    </article>
 </body>
 </html>
