--- a/articles.html
+++ b/articles.html
@@ -10,30 +10,30 @@
     </div>
 
     <article>
+        <h2>Article title</h2>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
-        <p>bla bla bla</p>
-        <p>bla bla bla</p>
+        <hr />
     </article>
 
     <article>
+        <h2>Article title</h2>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
-        <p>bla bla bla</p>
-        <p>bla bla bla</p>
+        <hr />
     </article>
 
     <article>
+        <h2>Article title</h2>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
-        <p>bla bla bla</p>
-        <p>bla bla bla</p>
+        <hr />
     </article>
 </body>
 </html>
