--- a/articles.html
+++ b/articles.html
@@ -10,7 +10,7 @@
     </div>
 
     <article>
-        <h2>Article title</h2>
+        <h2>Article 1</h2>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
@@ -19,7 +19,7 @@
     </article>
 
     <article>
-        <h2>Article title</h2>
+        <h2>Article 2</h2>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
@@ -28,7 +28,7 @@
     </article>
 
     <article>
-        <h2>Article title</h2>
+        <h2>Article 3</h2>
         <p>Published by author</p>
         <p>bla bla bla</p>
         <p>bla bla bla</p>
