Add combining selectors

--- a/lists.html
+++ b/lists.html
@@ -5,19 +5,24 @@
     <link rel="stylesheet" type="text/css" href="css/syntax.css">
 </head>
 <body>
-    <ul>
-        <li>ITEM LIST</li>
-        <li>item 1</li>
-        <li>item 2</li>
-        <li>item 3</li>
-        <li>item 4</li>
-        <li>item 5</li>
-        <li>HALF WAY TITLE</li>
-        <li>item 6</li>
-        <li>item 7</li>
-        <li>item 8</li>
-        <li>item 9</li>
-        <li>item 10</li>
-    </ul>
+    <article class="featured-content">
+        <p>Dummy text</p>
+    </article>
+
+    <article class="featured-content">
+        <p>Dummy text</p>
+    </article>
+
+    <article>
+        <p>Dummy text</p>
+    </article>
+
+    <div class="featured-content">
+        <p>Dummy text</p>
+    </div>
+
+    <div>
+        <img src="#" alt="test">
+    </div>
 </body>
 </html>
