--- a/index.html
+++ b/index.html
@@ -3,25 +3,29 @@
 <head>
     <title>CSS Tutorial</title>
     <link rel="stylesheet" type="text/css" href="css/syntax.css">
+    <style>
+        body{
+            background: #eee;
+        }
+
+        #main-content{
+            background: #fff;
+            width: 1200px;
+            margin: 0 auto;
+            height: 100%;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div id="header">
-        <h1>Selectors</h1>
-        <h2>In CSS</h2>
-        <p>Welcome to the website:</p>
+    <div id="main-content">
+        <h1>CSS Tutorial</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
-    <a href="#">This is a link</a>
-    <a href="#">This is a link</a>
-    <a href="#">This is a link</a>
-
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
-    <p>Hello there!</p>
 </body>
 </html>
