--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
     <div id="main-content">
         <h1>CSS Tutorial</h1>
         
-        <div class="box small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-        <div class="box">This is the content</div>
+        <div class="box dashed">dashed</div>
+        <div class="box dotted">dotted</div>
+        <div class="box double">double</div>
+        <div class="box groove">groove</div>
+        <div class="box inset">inset</div>
+        <div class="box outset">outset</div>
+        <div class="box ridge">ridge</div>
+        <div class="box solid">solid</div>
     </div>
 
 </body>
